# fin-rag-analyst

./: .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  requirements.txt
config/: config.yaml
config/guardrails/: config.yml  rails.co
docker/: docker-compose.yml
scripts/: ingest.py  smoke_test.py  test_retrieval.py
src/: config.py  graph.py  llm_factory.py  observability.py  rag_pipeline.py  state.py
src/agents/: compiler.py  compliance.py  fetcher.py  retriever.py  synthesizer.py
tests/: test_compliance.py  test_rag_pipeline.py  test_ui_components.py
ui/components/: app.py  chat_panel.py  eval_dashboard.py  hitl_panel.py  report_panel.py  sidebar.py
